added structure for website. Dealing with bug connected to reliability with webcam bug: Identified bug

--- a/website/src/templates/index.html
+++ b/website/src/templates/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>This is a live video of the current state of the telescope</h1>
-    <img src="http://127.0.0.1:5000/video_feed" width="70%">
+    <img src="http://webcam:5000/video_feed" width="70%">
 
     <p> Flask is Fun </p>
   </body>
