--- a/website/src/templates/index.html
+++ b/website/src/templates/index.html
@@ -1,13 +1,81 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Extremely Virtual Telescope</title>
-  </head>
-  <body>
-    <h1>This is a live video of the current state of the telescope</h1>
-    <img src="http://webcam:5000/video_feed" width="70%">
+    <link rel="stylesheet" href="/static/style.css">
+    <!-- TODO: Download -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+<body>
+  <div class="sidebar">
+    <div class="logo-details">
+      <div class="logo_name">EVT</div>
+        <i class='bx bx-menu' id="btn" ></i>
+    </div>
+    <ul class="nav-list">
+      <li>
+        <a href="#">
+          <i class='bx bx-webcam'></i>
+          <span class="links_name">Telescope State</span>
+        </a>
+        <span class="tooltip">Telescope State</span>
+      </li>
+      <li>
+       <a href="#">
+         <i class='bx bx-folder' ></i>
+         <span class="links_name">Fits-Files</span>
+       </a>
+       <span class="tooltip">Fits-Files</span>
+     </li>
+     <li>
+       <a href="#">
+         <i class='bx bx-pie-chart-alt-2' ></i>
+         <span class="links_name">Analytics</span>
+       </a>
+       <span class="tooltip">Analytics</span>
+     </li>
+     <li>
+       <a href="#">
+         <i class='bx bx-bar-chart-alt-2' ></i>
+         <span class="links_name">Observation Planning</span>
+       </a>
+       <span class="tooltip">Observation Planning</span>
+     </li>
+    </ul>
+  </div>
 
-    <p> Flask is Fun </p>
-  </body>
+  <section class="home-section">
+      <div class="text">Dashboard</div>
+  <br>
+         <img src="http://127.0.0.1:5001/video_feed" width="40%"> 
+  </section>
+
+  <script>
+  let sidebar = document.querySelector(".sidebar");
+  let closeBtn = document.querySelector("#btn");
+  let searchBtn = document.querySelector(".bx-search");
+
+  closeBtn.addEventListener("click", ()=>{
+    sidebar.classList.toggle("open");
+    menuBtnChange();//calling the function(optional)
+  });
+
+  searchBtn.addEventListener("click", ()=>{ // Sidebar open when you click on the search iocn
+    sidebar.classList.toggle("open");
+    menuBtnChange(); //calling the function(optional)
+  });
+
+  // following are the code to change sidebar button(optional)
+  function menuBtnChange() {
+   if(sidebar.classList.contains("open")){
+     closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");//replacing the iocns class
+   }else {
+     closeBtn.classList.replace("bx-menu-alt-right","bx-menu");//replacing the iocns class
+   }
+  }
+  </script>
+</body>
 </html>
+
