made sidebar bootstrap compatible

--- a/website/src/templates/index.html
+++ b/website/src/templates/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Extremely Virtual Telescope</title>
+
     <link rel="stylesheet" href="/static/style.css">
     <!-- TODO: Download -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
@@ -47,10 +50,17 @@
   </div>
 
   <section class="home-section">
+<!--
       <div class="text">Dashboard</div>
   <br>
          <img src="http://127.0.0.1:5001/video_feed" width="40%"> 
+
+-->
+
+
   </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   <script>
   let sidebar = document.querySelector(".sidebar");
