Added form, kinda works but image stream of webcam module is interrupted whenever form is sent

--- a/website/src/static/style.css
+++ b/website/src/static/style.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
+
+html body {
+  background-color: #E4E9F7;
+}
+
+
 .sidebar{
   position: fixed;
   left: 0;
@@ -210,16 +216,19 @@
   position: relative;
   background: #E4E9F7;
   min-height: 100vh;
+  padding: 0px;
+  margin: 0px
   top: 0;
   left: 78px;
-  width: calc(100% - 78px);
+  width: calc(100% - 90px); 
   transition: all 0.5s ease;
   z-index: 2;
 }
 .sidebar.open ~ .home-section{
   left: 250px;
-  width: calc(100% - 250px);
+  width: calc(100% - 262px);
 }
+
 .home-section .text{
   display: inline-block;
   color: #11101d;
@@ -227,6 +236,7 @@
   font-weight: 500;
   margin: 18px
 }
+
 @media (max-width: 420px) {
   .sidebar li .tooltip{
     display: none;
