made form asynchronously, now everything works (the site is not reloaded every time the form submits)

--- a/website/src/templates/base.html
+++ b/website/src/templates/base.html
@@ -8,7 +8,7 @@
 -->
     {% endblock %}
 
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
     <!-- TODO: Download -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
