--- a/website/src/templates/pages/telescope-state.html
+++ b/website/src/templates/pages/telescope-state.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
+  <script src="{{url_for('static',filename='js/telescope_form.js')}}" defer></script>
+
   <section class="home-section">
       <div class="text">Telescope State</div>
      <br>
@@ -11,22 +14,20 @@
              <img src="http://127.0.0.1:5001/video_feed" width="100%">
           </div>
         <div class="col-8">
-          <form action="/submit" method="POST">
 
-            <div class="form-group">
-              <label for="formControlRange">Altitude</label><br>
-                <input type="range" class="form-control-range" id="formControlRange" min="0" max="90" step="0.1" value="0" name="altitude">
-            </div>
-            <div class="form-group">
-              <label for="formControlRange">Azimuth</label><br>
-                <input type="range" class="form-control-range" id="formControlRange" min="0" max="360" step="0.1" name="azimuth">
-            </div>
-            <div class="form-check form-group">
-              <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" name="door_state">
-              <label class="form-check-label" for="defaultCheck1" >Door open</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form> 
+          <div class="form-group">
+            <label for="formControlRange">Altitude</label><br>
+              <input type="range" class="form-control-range" id="formControlRange" min="0" max="90" step="0.1" value="0" name="altitude">
+          </div>
+          <div class="form-group">
+            <label for="formControlRange">Azimuth</label><br>
+              <input type="range" class="form-control-range" id="formControlRange" min="0" max="360" step="0.1" name="azimuth">
+          </div>
+          <div class="form-check form-group">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" name="door_state">
+            <label class="form-check-label" for="defaultCheck1" >Door open</label>
+          </div>
+          <button type="submit" class="btn btn-primary telescope_positioning_button">Submit</button>
 
         </div>
       </div>
